# Haskell-Connect4-Solver

./: Board.hs  Connected_four.hs  Constants.hs  Main.hs  MinMaxSearch.hs  README.txt  haskell-connect4.cabal  readme.md
