cabal-version:       >=1.10
name:                haskell-connect4
version:             0.1.0.0
author:              Reut Tal
maintainer:          reutgaming@gmail.com
copyright:           MIT
build-type:          Simple

executable haskell-connect4-exe
    main-is:             Main.hs
    build-depends:       base >= 4.7 && < 5,
                       containers,
                       random 
    other-modules:     Connected_four,
                       Constants
                       Board,
                       MinMaxSearch
    default-language:    Haskell2010
